// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rangeInput expect to render with custom classNames 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form custom-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max custom-inputMax",
      "inputMin": "ais-RangeInput-input--min custom-inputMin",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput custom-root",
      "separator": "ais-RangeInput-separator custom-separator",
    }
  }
  labels={
    Object {
      "separator": "to",
      "submit": "Go",
    }
  }
  max={0}
  min={0}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": undefined,
      "min": undefined,
    }
  }
/>
`;

exports[`rangeInput expect to render with custom labels 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max",
      "inputMin": "ais-RangeInput-input--min",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput",
      "separator": "ais-RangeInput-separator",
    }
  }
  labels={
    Object {
      "separator": "custom-separator",
      "submit": "custom-submit",
    }
  }
  max={0}
  min={0}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": undefined,
      "min": undefined,
    }
  }
/>
`;

exports[`rangeInput expect to render with refinement 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max",
      "inputMin": "ais-RangeInput-input--min",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput",
      "separator": "ais-RangeInput-separator",
    }
  }
  labels={
    Object {
      "separator": "to",
      "submit": "Go",
    }
  }
  max={500}
  min={10}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": 475,
      "min": 25,
    }
  }
/>
`;

exports[`rangeInput expect to render with refinement at boundaries 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max",
      "inputMin": "ais-RangeInput-input--min",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput",
      "separator": "ais-RangeInput-separator",
    }
  }
  labels={
    Object {
      "separator": "to",
      "submit": "Go",
    }
  }
  max={500}
  min={10}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": undefined,
      "min": undefined,
    }
  }
/>
`;

exports[`rangeInput expect to render with results 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max",
      "inputMin": "ais-RangeInput-input--min",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput",
      "separator": "ais-RangeInput-separator",
    }
  }
  labels={
    Object {
      "separator": "to",
      "submit": "Go",
    }
  }
  max={500}
  min={10}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": undefined,
      "min": undefined,
    }
  }
/>
`;

exports[`rangeInput expect to render without results 1`] = `
<RangeInput
  collapsible={false}
  cssClasses={
    Object {
      "button": "ais-RangeInput-button",
      "currency": "ais-RangeInput-currency",
      "form": "ais-RangeInput-form",
      "input": "ais-RangeInput-input",
      "inputMax": "ais-RangeInput-input--max",
      "inputMin": "ais-RangeInput-input--min",
      "label": "ais-RangeInput-label",
      "noRefinement": "ais-RangeInput--noRefinement",
      "root": "ais-RangeInput",
      "separator": "ais-RangeInput-separator",
    }
  }
  labels={
    Object {
      "separator": "to",
      "submit": "Go",
    }
  }
  max={0}
  min={0}
  refine={[Function]}
  step={1}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
      },
    }
  }
  values={
    Object {
      "max": undefined,
      "min": undefined,
    }
  }
/>
`;
